<resources>
    <string name="app_name">Androids Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="button3">Click Here</string>
    <string name="textView">Look at my GUI</string>
    <string name="switchText"> Switch On / Off</string>
    <string name="checkBox">check this out!</string>
    <string name="editText">Type Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_on">The Switch is now ON</string>
    <string name="switch_off">The Switch is now Off</string>
    <string name="undo">Undo</string>
    <string name="goToChat">Go to chat</string>
    <string name="email_Text">Enter your email address:</string>
    <string name="emailInput">Type your email here</string>
    <string name="pass_Text">Type your password</string>
    <string name="loginBtn">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name">Your Name:</string>
    <string name="name_input">Enter your name</string>
    <string name="email">Your Email:</string>
    <string name="picture">Your picture:</string>
    <string name="pic_Text">Click button above to take a picture</string>
    <string name="sendBtn">Send</string>
    <string name="inputBox">Chat here</string>
    <string name="receiveBtn">Receive</string>
    <string name="Weather">Weather Forecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_toolbar_page">go to toolbar page</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="settings">About</string>
    <string name="go_back_to_login" translatable="false">Go back to login</string>
    <string name="chat_page" translatable="false">Chat Page</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Closed</string>


</resources>
